@@ -1,4 +1,7 @@
-﻿[B]Version 1.1.8[/B]
+﻿[B]Version 1.2.0[/B]
+- Removed BeautifulSoup usage for proper copmatibility
+
+[B]Version 1.1.8[/B]
 - Changed root path detection method
 
 [B]Version 1.1.7.1[/B]
